--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,12 @@
 			<artifactId>bibliorium-bom</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 			<type>pom</type>
+			<exclusions>
+				<exclusion>
+					<groupId>org.primefaces</groupId>  
+					<artifactId>primefaces</artifactId>  
+				</exclusion>
+			</exclusions>
 		</dependency>
 	</dependencies>
 	
@@ -41,5 +47,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
