--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>br.com.otakudragon</groupId>
   <artifactId>bibliorium-ejb</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
   <packaging>ejb</packaging>
   <name>bibliorium-ejb</name>
   <description>Componente de classes de negócio e persistência do projeto Bibliorium </description>
-	
+	<parent>
+		<groupId>br.com.otakudragon</groupId>
+		<artifactId>bibliorium-bom</artifactId>
+		<version>1.0.0-ALPHA</version>
+	</parent>
 	<dependencies>
 		<dependency>
 			<groupId>br.com.otakudragon</groupId>
